Fixed the css of the schedule, and an issue with modifying shifts

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -28,6 +28,7 @@ body {
 }
 
 #content {
+    overflow:hidden;
     min-height: 600px;
     padding: 10px;
     h1 {
